# platform.core.messaging.email-service

./: AUTHORS  CMakeLists.txt  LICENSE  LICENSE.BSD  NOTICE  SLP_EmailService_PG.h  dbuild.sh  email-service  email-service-serviced.sh  email-service.manifest  email-service.pc.in  email-service.rule  email-service_PG.h
Common/: CMakeLists.txt  Msg_Convert.c
Common/include/: Msg_Convert.h
MAPI/: CMakeLists.txt  Emf_Mapi_Account.c  Emf_Mapi_Init.c  Emf_Mapi_Mailbox.c  Emf_Mapi_Message.c  Emf_Mapi_Network.c  Emf_Mapi_Rule.c  Emf_Mapi_Types.c
MAPI/include/: Emf_Mapi.h  Emf_Mapi_Account.h  Emf_Mapi_Init.h  Emf_Mapi_Mailbox.h  Emf_Mapi_Message.h  Emf_Mapi_Network.h  Emf_Mapi_Rule.h  Emf_Mapi_Types.h
email-api/: CMakeLists.txt  email-api-account.c  email-api-etc.c  email-api-init.c  email-api-mail.c  email-api-mailbox.c  email-api-network.c  email-api-rule.c  email-api-smime.c
email-api/doc/: email-service_doc.h
email-api/include/: email-api-account.h  email-api-etc.h  email-api-init.h  email-api-mail.h  email-api-mailbox.h  email-api-network.h  email-api-rule.h  email-api-smime.h  email-api.h
email-common-use/: CMakeLists.txt  email-convert.c  email-utilities.c  tpl.c
email-common-use/include/: email-convert.h  email-debug-log.h  email-errors.h  email-internal-types.h  email-types.h  email-utilities.h  tpl.h
email-core/: CMakeLists.txt  em-core-account.c  em-core-api.c  em-core-event.c  em-core-global.c  em-core-imap-idle.c  em-core-imap-mailbox.c  em-core-mailbox-sync.c  em-core-mailbox.c  em-core-mesg.c  em-core-mime.c  em-core-mm-callbacks.c  em-core-smtp.c  em-core-sound.c  em-core-timer.c  em-core-utils.c  email-core-account.c  email-core-alarm.c  email-core-api.c  email-core-auto-download.c  email-core-cert.c  email-core-container.c  email-core-cynara.c  email-core-event.c  email-core-global.c  email-core-gmime.c  email-core-imap-idle.c  email-core-imap-mailbox.c  email-core-key-manager.c  email-core-mail.c  email-core-mailbox-sync.c  email-core-mailbox.c  email-core-mime.c  email-core-mm-callbacks.c  email-core-notification.c  email-core-pgp.c  email-core-signal.c  email-core-smime.c  email-core-smtp.c  email-core-sound.c  (+4 more)
email-core/em-network/: em-network.c
email-core/em-network/include/: em-network.h
email-core/em-storage/: em-storage-noti.c  em-storage.c
email-core/em-storage/include/: em-storage.h
email-core/email-device/: email-device.c
email-core/email-device/include/: email-device.h
email-core/email-network/: email-network.c
email-core/email-network/include/: email-network.h
email-core/email-storage/: email-storage.c
email-core/email-storage/include/: email-storage.h
email-core/include/: em-core-account.h  em-core-api.h  em-core-event.h  em-core-global.h  em-core-imap-idle.h  em-core-imap-mailbox.h  em-core-mailbox-sync.h  em-core-mailbox.h  em-core-mesg.h  em-core-mime.h  em-core-smtp.h  em-core-sound-conflict.h  em-core-sound.h  em-core-timer.h  em-core-types.h  em-core-utils.h  email-core-account.h  email-core-alarm.h  email-core-api.h  email-core-auto-download.h  email-core-cert.h  email-core-container.h  email-core-cynara.h  email-core-event.h  email-core-global.h  email-core-gmime.h  email-core-imap-idle.h  email-core-imap-mailbox.h  email-core-key-manager.h  email-core-mail.h  email-core-mailbox-sync.h  email-core-mailbox.h  email-core-mime.h  email-core-notification.h  email-core-pgp.h  email-core-signal.h  email-core-smime.h  email-core-smtp.h  email-core-sound.h  email-core-task-manager.h  (+3 more)
email-daemon/: CMakeLists.txt  email-daemon-account.c  email-daemon-auto-poll.c  email-daemon-emn.c  email-daemon-etc.c  email-daemon-event.c  email-daemon-init.c  email-daemon-mail.c  email-daemon-mailbox.c  main.c
email-daemon/include/: .gitignore  email-daemon-account.h  email-daemon-auto-poll.h  email-daemon-emn.h  email-daemon-event.h  email-daemon-init.h  email-daemon-mutex.h  email-daemon.h
email-engine/: CMakeLists.txt  emf-account.c  emf-auto-poll.c  emf-emn-noti.c  emf-emn.c  emf-etc.c  emf-global.c  emf-init.c  emf-mail.c  emf-mailbox.c  main.c
email-ipc/: CMakeLists.txt  cscope.files  cscope.out  email-ipc-api.c  email-ipc-build.c  email-ipc-proxy.c  email-ipc-stub.c
email-ipc/email-activation/: email-dbus-activation.c  email-service.service  email-service.xml
email-ipc/email-activation/include/: email-dbus-activation.h
email-ipc/email-ipc-api/: email-ipc-api-info.c  email-ipc-param-list.c  email-ipc-param.c
email-ipc/email-ipc-api/include/: email-ipc-api-info.h  email-ipc-param-list.h  email-ipc-param.h
email-ipc/email-proxy/: email-proxy-callback-info.c  email-proxy-main.c  email-proxy-socket.c
email-ipc/email-proxy/include/: email-proxy-callback-info.h  email-proxy-main.h  email-proxy-socket.h
email-ipc/email-socket/: email-ipc-socket.c
email-ipc/email-socket/include/: email-ipc-socket.h
email-ipc/email-stub/: email-stub-main.c  email-stub-queue.c  email-stub-response-info.c  email-stub-socket.c  email-stub-task-manager.c  email-stub-task.c
email-ipc/email-stub/include/: email-stub-main.h  email-stub-queue.h  email-stub-response-info.h  email-stub-socket.h  email-stub-task-manager.h  email-stub-task.h
email-ipc/include/: email-ipc-build.h  email-ipc.h
ipc/: CMakeLists.txt  ipc-library-api.cpp  ipc-library-build.cpp  ipc-library-proxy.cpp  ipc-library-stub.cpp
ipc/api/: ipc-api-info.cpp  ipc-param-list.cpp  ipc-param.cpp
ipc/api/include/: ipc-api-info.h  ipc-param-list.h  ipc-param.h
ipc/common/: cm-list.cpp  cm-sys-msg-queue.cpp
ipc/common/include/: cm-list.h  cm-sys-msg-queue.h
ipc/include/: ipc-library.h
ipc/proxy/: ipc-callback-info.cpp  ipc-proxy-main.cpp  ipc-proxy-socket.cpp
ipc/proxy/include/: ipc-callback-info.h  (+2 more)
ipc/socket/: ipc-socket.cpp
ipc/stub/: ipc-queue.cpp  ipc-response-info.cpp  ipc-stub-main.cpp  ipc-stub-socket.cpp  ipc-task-manager.cpp  ipc-task.cpp
utilities/: CMakeLists.txt
utilities/test-application/: main.c  testapp-account.c  testapp-gmime.c  testapp-mail.c  testapp-mailbox.c  testapp-others.c  testapp-rule.c  testapp-thread.c  testapp-utility.c
(+269 files in other folders)
